c2/ProcessHoldings
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/ProcessHoldings/src/crazy.c:515:12: error: expected expression
*( _OWORD *)&holding[1][12] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/ProcessHoldings/src/crazy.c:515:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[1][12] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/ProcessHoldings/src/crazy.c:516:12: error: expected expression
*( _OWORD *)&holding[1][8] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/ProcessHoldings/src/crazy.c:516:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[1][8] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/ProcessHoldings/src/crazy.c:517:12: error: expected expression
*( _OWORD *)&holding[1][4] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/ProcessHoldings/src/crazy.c:517:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[1][4] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/ProcessHoldings/src/crazy.c:518:12: error: expected expression
*( _OWORD *)&holding[1][0] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/ProcessHoldings/src/crazy.c:518:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[1][0] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/ProcessHoldings/src/crazy.c:519:12: error: expected expression
*( _OWORD *)&holding[0][12] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/ProcessHoldings/src/crazy.c:519:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[0][12] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/ProcessHoldings/src/crazy.c:520:12: error: expected expression
*( _OWORD *)&holding[0][8] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/ProcessHoldings/src/crazy.c:520:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[0][8] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/ProcessHoldings/src/crazy.c:521:12: error: expected expression
*( _OWORD *)&holding[0][4] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/ProcessHoldings/src/crazy.c:521:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[0][4] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/ProcessHoldings/src/crazy.c:522:12: error: expected expression
*( _OWORD *)&holding[0][0] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/ProcessHoldings/src/crazy.c:522:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[0][0] = 0LL; 
   ^
16 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/ProcessHoldings/src/obj/crazy.o] Error 1
